--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python = "^3.9"
 tweepy = "^4.10.0"
 pypandoc = "^1.8.1"
 weasyprint = "^55.0"
+rich = "^12.4.4"
 
 [tool.poetry.dev-dependencies]
 
