--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ tweepy = "^4.10.0"
 pypandoc = "^1.8.1"
 weasyprint = "^55.0"
 rich = "^12.4.4"
+parse = "^1.19.0"
 
 [tool.poetry.dev-dependencies]
 
