--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ rich = "^12.4.4"
 parse = "^1.19.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
